docs: fix ADR broken links and update index table in README